Fix Debug tab compleate